--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,26 @@
-# Backend API simple
+attrs==25.4.0
+bcrypt==5.0.0
+blinker==1.9.0
+certifi==2025.10.5
+charset-normalizer==3.4.4
+click==8.3.0
+dnspython==2.8.0
 Flask==3.1.2
-
-# Base de données (sans SQLAlchemy)
-mysql-connector-python==8.2.0
-pymongo==4.6.0
-
-# Traitement de données
-gpxpy==1.5.0
-pandas==2.3.3
-numpy==2.3.4
-
-# Géolocalisation
+geographiclib==2.1
 geopy==2.4.1
-
-# Web scraping et APIs
-requests==2.32.5
-
-# Utilitaires
-python-dateutil==2.9.0.post0
+gpxpy==1.6.2
 h11==0.16.0
 idna==3.11
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.3
+mysql-connector-python==9.4.0
 numpy==2.3.4
 outcome==1.3.0.post0
 packaging==25.0
 pandas==2.3.3
 passlib==1.7.4
+pymongo==4.15.3
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
