--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ PySocks==1.7.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-jose==3.5.0
+python-multipart==0.0.20
 pytz==2025.2
 PyYAML==6.0.3
 requests==2.32.5
