--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ Jinja2==3.1.6
 MarkupSafe==3.0.3
 mysql-connector-python==9.4.0
 numpy==2.3.4
+orjson==3.11.4
 outcome==1.3.0.post0
 packaging==25.0
 pandas==2.3.3
