--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -2,8 +2,8 @@ FROM python:3.12
 
 WORKDIR /usr/src/app
 
-COPY requirements.txt ./
-RUN pip install --no-cache-dir -r requirements.txt
+COPY requirements.frontend.txt ./
+RUN pip install --no-cache-dir -r requirements.frontend.txt
 
 COPY ./frontend .
 
